04_Teste/exercicios_gerados/question_mdp_29_variavel/version_3/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 3
    2k = 2 * k
     ^
SyntaxError: invalid syntax